# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
page_loader/: __init__.py  cli.py  errors.py  files.py  links.py  loading.py  logging.py  names.py  resources.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_downloading.py  test_exeptions.py  test_files_name.py
tests/fixtures/: page_with_global_links.html  page_with_local_links.html
tests/fixtures/files/: java_script.js  styles.css
